# chronicle-weaver-ai

./: AGENTS.md  AGENTS.md.save  AI_RPG_Engine_Design_v2-2.docx  README.md  drand_session.jsonl  drand_session2.jsonl  local_session.jsonl  lorebook.json  pyproject.toml  rel_lore2.json  rel_lorebook.json  rel_queue.jsonl  rel_queue2.jsonl  rel_session.jsonl  rel_session2.jsonl  review_queue.jsonl  review_queue_clean.jsonl  session.jsonl  session_clean.jsonl  start.sh
docs/: ARCHITECTURE_OVERVIEW.md  CURRENT_STATE_AUDIT.md  ENGINE_PIPELINE.md  PROJECT_GLOSSARY.md  acceptance_checklist.md
tests/: test_acceptance.py  test_api.py  test_api_new_endpoints.py  test_campaign_persistence.py  test_cli_demo.py  test_cli_narrate.py  test_combatant.py  test_companion_persona.py  test_companion_turns.py  test_compendium.py  test_compendium_actions.py  test_conditions.py  test_conditions_expanded.py  test_conditions_mechanical.py  test_context_budget.py  test_context_builder.py  test_damage_resolution.py  test_death_saves.py  test_demo_resolution_flow.py  test_dice.py  test_encounter_api.py  test_encounter_events.py  test_encounter_management.py  test_encounter_state.py  test_engine_flow.py  test_equipment.py  test_event_store.py  test_extra_attack.py  test_foundry_adapter.py  test_graph_retrieval.py  test_healing.py  test_hp_application.py  test_hybrid_retrieval.py  test_initiative.py  test_intent_router.py  test_lore_normalize.py  test_lore_queue.py  test_monster_compendium.py  test_monster_turns.py  test_narrator_backends.py  (+18 more)
ui/: app.js  index.html
(+85 files in other folders)
